# omni_goose

./: .gitignore  README.md  current_recommended_pass.txt  prompts.py  pyproject.toml  schemas.py
backends/: qwen_omni.py
config/: config.yaml  settings.py
docs/: goose_goose_duck_common_knowledge.zh-CN.md  omni_goose_benchmark_release_and_automation.zh-CN.md  qwen3_omni_annotation_pipeline.zh-CN.md  social_omni_goose_decrypto_diagnostics.zh-CN.md
integrations/: __init__.py
scripts/: analyze_level1_ablation.py  build_candidate_trials.py  build_decrypto_high_value_review_queue.py  build_decrypto_human_verified_subset.py  build_decrypto_paper_gold_candidates.py  build_decrypto_pass11_codex_human_verified.py  build_decrypto_pass3_qwen_checked.py  build_decrypto_pass4_qwen_video_checked.py  build_decrypto_style_diagnostics.py  build_gameplay_phase_manifest.py  build_information_states.py  build_level1_identity_content_sets.py  build_meeting_utterances.py  build_oracle_trajectory_ledger.py  cut_gameplay_phase_videos.py  export_event_aligned_omni_eval.py  export_omni_goose_aligned_videos.py  export_social_omni_goose_benchmark.py  export_tom_benchmark.py  infer_sync_offsets.py  mark_game_starts.py  merge_global_events.py  normalize_gameplay_phase_annotations.py  package_gameplay_aligned_release.py  package_omni_goose_benchmark_release.py  package_omni_goose_benchmark_v2.py  plan_replace_pending_with_4x2.py  prepare_level2_extended_data.py  prepare_social_omni_goose_qwen_eval_workspace.py  recover_omni_goose_error_outputs.py  repair_decrypto_reviewed_pass.py  report_benchmark_quality.py  report_level2_extended_by_language.py  report_omni_goose_progress.py  reprocess_annotation_errors.py  run_annotation_checkers.py  run_belief_state_annotation.py  run_candidate_trial_generation.py  run_decrypto_high_quality_review.py  run_gameplay_phase_video_annotation.py  (+23 more)
slurm/: README.md  omni_goose_promote_export_monitor.slurm  qwen3_annotation_pipeline.slurm  qwen3_level2_q2_judge.sh  qwen3_omni_benchmark_smoke.slurm  qwen3_omni_decrypto_diagnostics.slurm  qwen3_omni_decrypto_review.slurm  qwen3_omni_gameplay_stage.slurm  qwen3_omni_oracle_2gpu_stage.slurm  qwen3_omni_oracle_4x2_local.slurm  qwen3_omni_oracle_local_array.slurm  qwen3_omni_social_omni_eval.slurm  qwen3_round_boundary_annotation.slurm  socialomni_autoserver.slurm
socialomni_annotation/: __init__.py  eval_export.py  json_utils.py  postprocess.py  prompts.py  runner.py  schemas.py  splitting.py  sync.py
(+300 files in other folders)
